--- a/files/en-us/web/guide/audio_and_video_delivery/video_player_styling_basics/index.html
+++ b/files/en-us/web/guide/audio_and_video_delivery/video_player_styling_basics/index.html
@@ -57,7 +57,7 @@ tags:
 <p>The resultant video player style used here is rather basic — this is intentional, as the purpose is to show how such a video player could be styled and be made responsive.</p>
 
 <div class="note">
-<p><strong>Note</strong>: in some cases some basic CSS is omitted from the code examples here as its use is either obvious or not specifically relevant to styling the video player.</p>
+<p><strong>Note:</strong> in some cases some basic CSS is omitted from the code examples here as its use is either obvious or not specifically relevant to styling the video player.</p>
 </div>
 
 <h3 id="Basic_styling">Basic styling</h3>
