--- a/files/en-us/web/guide/audio_and_video_delivery/webaudio_playbackrate_explained/index.html
+++ b/files/en-us/web/guide/audio_and_video_delivery/webaudio_playbackrate_explained/index.html
@@ -54,7 +54,7 @@ myAudio.playbackRate = 0.5;</pre>
 <p>Finally, we listen for the <code>input</code> event firing on the {{ htmlelement("input") }} element, allowing us to react to the playback rate control being changed.</p>
 
 <div class="note">
-<p><strong>Note</strong>: <a href="https://jsbin.com/UGIxoJis/1/edit">Try out this example live</a>, and try adjusting the playback rate control to see the effect.</p>
+<p><strong>Note:</strong> <a href="https://jsbin.com/UGIxoJis/1/edit">Try out this example live</a>, and try adjusting the playback rate control to see the effect.</p>
 </div>
 
 <h2 id="defaultPlaybackRate_and_ratechange">defaultPlaybackRate and ratechange</h2>
