--- a/files/en-us/web/guide/audio_and_video_delivery/adding_captions_and_subtitles_to_html5_video/index.html
+++ b/files/en-us/web/guide/audio_and_video_delivery/adding_captions_and_subtitles_to_html5_video/index.html
@@ -10,9 +10,7 @@ tags:
   - subtitles
   - track
 ---
-<div class="summary">
-<p><span class="seoSummary">In other articles we looked at how to <a href="/en-US/docs/Web/Guide/Audio_and_video_delivery/cross_browser_video_player">build a cross browser video player</a> using the {{ domxref("HTMLMediaElement") }} and {{ domxref("Window.fullScreen") }} APIs, and also at how to <a href="/en-US/docs/Web/Guide/Audio_and_video_delivery/Video_player_styling_basics">style the player</a>. This article will take the same player and show how to add captions and subtitles to it, using {{ domxref("WebVTT_API","the WebVTT format") }} and the {{ htmlelement("track") }} element.</span></p>
-</div>
+<p>In other articles we looked at how to <a href="/en-US/docs/Web/Guide/Audio_and_video_delivery/cross_browser_video_player">build a cross browser video player</a> using the {{ domxref("HTMLMediaElement") }} and {{ domxref("Window.fullScreen") }} APIs, and also at how to <a href="/en-US/docs/Web/Guide/Audio_and_video_delivery/Video_player_styling_basics">style the player</a>. This article will take the same player and show how to add captions and subtitles to it, using {{ domxref("WebVTT_API","the WebVTT format") }} and the {{ htmlelement("track") }} element.</p>
 
 <h2 id="Captioned_video_example">Captioned video example</h2>
 
@@ -21,7 +19,7 @@ tags:
 <p><img alt='Video player with stand controls such as play, stop, volume, and captions on and off. The video playing shows a scene of a man holding a spear-like weapon, and a caption reads "Esta hoja tiene pasado oscuro."' src="video-player-with-captions.png" style="display: block; margin: 0px auto;"></p>
 
 <div class="note">
-<p><strong>Note</strong>: You can find the <a href="https://github.com/iandevlin/iandevlin.github.io/tree/master/mdn/video-player-with-captions">source on Github</a>, and also <a href="https://iandevlin.github.io/mdn/video-player-with-captions/">view the example live</a>.</p>
+<p><strong>Note:</strong> You can find the <a href="https://github.com/iandevlin/iandevlin.github.io/tree/master/mdn/video-player-with-captions">source on Github</a>, and also <a href="https://iandevlin.github.io/mdn/video-player-with-captions/">view the example live</a>.</p>
 </div>
 
 <h2 id="HTML5_and_Video_Captions">HTML5 and Video Captions</h2>
@@ -269,7 +267,7 @@ var createMenuItem = function(id, lang, label) {
 }</pre>
 
 <div class="note">
-<p><strong>Note</strong>: Some of the styling of cues with ::cue currently works on Chrome, Opera, and Safari, but not yet on Firefox.</p>
+<p><strong>Note:</strong> Some of the styling of cues with ::cue currently works on Chrome, Opera, and Safari, but not yet on Firefox.</p>
 </div>
 
 <h2 id="Browser_compatibility">Browser compatibility</h2>
@@ -281,7 +279,7 @@ var createMenuItem = function(id, lang, label) {
 <p>Internet Explorer 10+ subtitles are enabled by default, and the default controls contain a button and a menu that offers the same functionality as the menu we just built. The <code>default</code> attribute is also supported.</p>
 
 <div class="note">
-<p><strong>Note</strong>: IE will completely ignore WebVTT files unless you define the MIME type. This can easily be done by adding an <code>.htaccess</code> file to an appropriate directory that contains <code>AddType text/vtt .vtt</code>.</p>
+<p><strong>Note:</strong> IE will completely ignore WebVTT files unless you define the MIME type. This can easily be done by adding an <code>.htaccess</code> file to an appropriate directory that contains <code>AddType text/vtt .vtt</code>.</p>
 </div>
 
 <h3 id="Safari">Safari</h3>
@@ -322,5 +320,5 @@ var createMenuItem = function(id, lang, label) {
 </dl>
 
 <div class="note">
-<p><strong>Note</strong>: You can find an excellent list of HTML5 Video Players and their current "state" at <a href="https://praegnanz.de/html5video/">HTML5 Video Player Comparison</a>.</p>
+<p><strong>Note:</strong> You can find an excellent list of HTML5 Video Players and their current "state" at <a href="https://praegnanz.de/html5video/">HTML5 Video Player Comparison</a>.</p>
 </div>
