--- a/files/en-us/web/guide/audio_and_video_manipulation/index.html
+++ b/files/en-us/web/guide/audio_and_video_manipulation/index.html
@@ -107,7 +107,7 @@ tags:
 <p>You can achieve the same result by applying the {{cssxref("filter-function/grayscale()", "grayscale()")}} CSS function to the source <code>&lt;video&gt;</code> element.</p>
 
 <div class="note">
-<p><strong>Note</strong>: Due to potential security issues if your video is on a different domain than your code, you'll need to enable <a href="/en-US/docs/Web/HTTP/CORS">CORS (Cross Origin Resource Sharing)</a> on your video server.</p>
+<p><strong>Note:</strong> Due to potential security issues if your video is on a different domain than your code, you'll need to enable <a href="/en-US/docs/Web/HTTP/CORS">CORS (Cross Origin Resource Sharing)</a> on your video server.</p>
 </div>
 
 <h3 id="Video_and_WebGL">Video and WebGL</h3>
@@ -117,7 +117,7 @@ tags:
 <p>{{EmbedGHLiveSample('webgl-examples/tutorial/sample8/index.html', 670, 510) }}</p>
 
 <div class="note">
-<p><strong>Note</strong>: You can find the <a href="https://github.com/mdn/webgl-examples/tree/gh-pages/tutorial/sample8">source code of this demo on GitHub</a> (<a href="https://mdn.github.io/webgl-examples/tutorial/sample8/">see it live</a> also).</p>
+<p><strong>Note:</strong> You can find the <a href="https://github.com/mdn/webgl-examples/tree/gh-pages/tutorial/sample8">source code of this demo on GitHub</a> (<a href="https://mdn.github.io/webgl-examples/tutorial/sample8/">see it live</a> also).</p>
 </div>
 
 <h3 id="Playback_rate">Playback rate</h3>
@@ -179,7 +179,7 @@ window.addEventListener('load', setPlaybackRate);
 <p>{{ EmbedLiveSample('Playable_code', 700, 425) }}</p>
 
 <div class="note">
-<p><strong>Note</strong>: Try the <a href="https://jsbin.com/qomuvefu/2/edit">playbackRate example</a> live.</p>
+<p><strong>Note:</strong> Try the <a href="https://jsbin.com/qomuvefu/2/edit">playbackRate example</a> live.</p>
 </div>
 
 <h2 id="Audio_manipulation">Audio manipulation</h2>
@@ -288,7 +288,7 @@ window.addEventListener('load', setFilter);
 <p>{{ EmbedLiveSample('Playable_code_2', 700, 425) }}</p>
 
 <div class="note">
-<p><strong>Note</strong>: unless you have <a href="/en-US/docs/Web/HTTP/CORS">CORS</a> enabled, to avoid security issues your video should be on the same domain as your code.</p>
+<p><strong>Note:</strong> unless you have <a href="/en-US/docs/Web/HTTP/CORS">CORS</a> enabled, to avoid security issues your video should be on the same domain as your code.</p>
 </div>
 
 <h4 id="Common_audio_filters">Common audio filters</h4>
@@ -307,7 +307,7 @@ window.addEventListener('load', setFilter);
 </ul>
 
 <div class="note">
-<p><strong>Note</strong>: See {{domxref("BiquadFilterNode")}} for more information.</p>
+<p><strong>Note:</strong> See {{domxref("BiquadFilterNode")}} for more information.</p>
 </div>
 
 <h3 id="Convolutions_and_impulses">Convolutions and impulses</h3>
@@ -344,7 +344,7 @@ source.start(0);
 context.listener.setPosition(0, 0, 0);</pre>
 
 <div class="note">
-<p><strong>Note</strong>: You can find an <a href="https://github.com/mdn/webaudio-examples/tree/master/panner-node">example on our GitHub repository</a> (<a href="https://mdn.github.io/webaudio-examples/panner-node/">see it live</a> also).</p>
+<p><strong>Note:</strong> You can find an <a href="https://github.com/mdn/webaudio-examples/tree/master/panner-node">example on our GitHub repository</a> (<a href="https://mdn.github.io/webaudio-examples/panner-node/">see it live</a> also).</p>
 </div>
 
 <h3 id="JavaScript_codecs">JavaScript codecs</h3>
@@ -363,7 +363,7 @@ context.listener.setPosition(0, 0, 0);</pre>
 </ul>
 
 <div class="note">
-<p><strong>Note</strong>: At Audiocogs, you can <a href="http://audiocogs.org/codecs/">Try out a few demos</a>; Audiocogs also provides a framework, <a href="http://audiocogs.org/codecs/">Aurora.js</a>, which is intended to help you author your own codecs in JavaScript.</p>
+<p><strong>Note:</strong> At Audiocogs, you can <a href="http://audiocogs.org/codecs/">Try out a few demos</a>; Audiocogs also provides a framework, <a href="http://audiocogs.org/codecs/">Aurora.js</a>, which is intended to help you author your own codecs in JavaScript.</p>
 </div>
 
 <h2 id="Examples">Examples</h2>
