Fix heading-style notes

--- a/files/en-us/web/guide/audio_and_video_delivery/cross-browser_audio_basics/index.html
+++ b/files/en-us/web/guide/audio_and_video_delivery/cross-browser_audio_basics/index.html
@@ -31,8 +31,7 @@ tags:
 &lt;/audio&gt;</pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>You can also use an MP4 file instead of MP3. MP4 files typically contain <a href="https://en.wikipedia.org/wiki/Advanced_Audio_Coding">AAC</a> encoded audio. You can use <code>type="audio/mp4"</code>. (Currently, browsers that support mp3 also support mp4 audio).</p>
+  <p><strong>Note:</strong> You can also use an MP4 file instead of MP3. MP4 files typically contain <a href="https://en.wikipedia.org/wiki/Advanced_Audio_Coding">AAC</a> encoded audio. You can use <code>type="audio/mp4"</code>. (Currently, browsers that support mp3 also support mp4 audio).</p>
 </div>
 
 <ul>
@@ -64,8 +63,7 @@ tags:
 &lt;/audio&gt;</pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>This value is often ignored on mobile platforms, and its use is not recommended unless really necessary. Auto-playing audio (and video) is usually really annoying. Plus browsers have policies that will block autoplay entirely in many situations. See the <a href="/en-US/docs/Web/Media/Autoplay_guide">Autoplay guide for media and Web Audio APIs</a> for details.</p>
+  <p><strong>Note:</strong> This value is often ignored on mobile platforms, and its use is not recommended unless really necessary. Auto-playing audio (and video) is usually really annoying. Plus browsers have policies that will block autoplay entirely in many situations. See the <a href="/en-US/docs/Web/Media/Autoplay_guide">Autoplay guide for media and Web Audio APIs</a> for details.</p>
 </div>
 
 <h4 id="loop">loop</h4>
@@ -85,8 +83,7 @@ tags:
 &lt;/audio&gt;</pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>This value is often ignored on mobile platforms.</p>
+  <p><strong>Note:</strong> This value is often ignored on mobile platforms.</p>
 </div>
 
 <h4 id="preload">preload</h4>
@@ -102,8 +99,7 @@ tags:
 </ol>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>This value is often ignored on mobile platforms.</p>
+  <p><strong>Note:</strong> This value is often ignored on mobile platforms.</p>
 </div>
 
 <pre class="brush: html">&lt;audio preload="auto"&gt;
@@ -188,8 +184,7 @@ myAudio.play();</pre>
 <pre class="brush: js">myAudio.pause();</pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>There is no stop method — to implement a stop function, you'd have to pause the media then set the <code>{{ anch("currentTime") }}</code> property value to 0.</p>
+  <p><strong>Note:</strong> There is no stop method — to implement a stop function, you'd have to pause the media then set the <code>{{ anch("currentTime") }}</code> property value to 0.</p>
 </div>
 
 <h4 id="canPlayType">canPlayType</h4>
@@ -212,8 +207,7 @@ myAudio.play();</pre>
 <p>In practice, we usually check if the result is true or false. Non-empty strings are true.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>A very early spec specified that the browser should return <code>no</code> instead of an empty string, but thankfully the number of people using older browsers that implement this version of the spec are few and far between.</p>
+  <p><strong>Note:</strong> A very early spec specified that the browser should return <code>no</code> instead of an empty string, but thankfully the number of people using older browsers that implement this version of the spec are few and far between.</p>
 </div>
 
 <h4 id="currentTime">currentTime</h4>
@@ -539,8 +533,7 @@ progress.addEventListener('click', function(e) {
 </dl>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>You can read more on <a href="/en-US/docs/Web/Guide/Audio_and_video_delivery/buffering_seeking_time_ranges">Buffering, Seeking and Time Ranges</a> elsewhere.</p>
+  <p><strong>Note:</strong> You can read more on <a href="/en-US/docs/Web/Guide/Audio_and_video_delivery/buffering_seeking_time_ranges">Buffering, Seeking and Time Ranges</a> elsewhere.</p>
 </div>
 
 <h2 id="Browser_support">Browser support</h2>
@@ -727,8 +720,7 @@ progress.addEventListener('click', function(e) {
 </table>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Nearly all browsers support MP3 — for more details see this page on <a href="/en-US/docs/Web/Media/Formats#browser_compatibility">media format browser compatibility</a>.</p>
+  <p><strong>Note:</strong> Nearly all browsers support MP3 — for more details see this page on <a href="/en-US/docs/Web/Media/Formats#browser_compatibility">media format browser compatibility</a>.</p>
 </div>
 
 <h2 id="See_also">See also</h2>
