--- a/files/en-us/web/guide/css/block_formatting_context/index.html
+++ b/files/en-us/web/guide/css/block_formatting_context/index.html
@@ -41,7 +41,7 @@ tags:
 </ul>
 
 <div class="notecard note">
-<p>Note: a Flex/Grid container({{ cssxref("display") }}: flex/grid/inline-flex/inline-grid) establishes a new Flex/Grid formatting context, which is similar to block formatting context except layout. There's no floating children available inside a flex/grid container, but exclude external floats and suppress margin collapsing still works.</p>
+<p><strong>Note:</strong> A Flex/Grid container({{ cssxref("display") }}: flex/grid/inline-flex/inline-grid) establishes a new Flex/Grid formatting context, which is similar to block formatting context except layout. There's no floating children available inside a flex/grid container, but exclude external floats and suppress margin collapsing still works.</p>
 </div>
 
 <h2 id="Examples">Examples</h2>
