--- a/files/en-us/web/guide/html/content_categories/index.html
+++ b/files/en-us/web/guide/html/content_categories/index.html
@@ -55,7 +55,7 @@ tags:
 <p>Elements belonging to this category are {{HTMLElement("article")}}, {{HTMLElement("aside")}}, {{HTMLElement("nav")}}, and {{HTMLElement("section")}}.</p>
 
 <div class="note">
-<p>Do not confuse this content model with the <a href="/en-US/docs/Web/HTML/Element/Heading_Elements#sectioning_roots" title="Sections and Outlines of an HTML5 document#sectioning root">sectioning root</a> category, which isolates its content from the regular outline.</p>
+<p><strong>Note:</strong> Do not confuse this content model with the <a href="/en-US/docs/Web/HTML/Element/Heading_Elements#sectioning_roots" title="Sections and Outlines of an HTML5 document#sectioning root">sectioning root</a> category, which isolates its content from the regular outline.</p>
 </div>
 
 <h3 id="Heading_content">Heading content</h3>
@@ -65,7 +65,7 @@ tags:
 <p>Elements belonging to this category are {{HTMLElement("h1")}}, {{HTMLElement("h2")}}, {{HTMLElement("h3")}}, {{HTMLElement("h4")}}, {{HTMLElement("h5")}}, {{HTMLElement("h6")}} and {{HTMLElement("hgroup")}}.</p>
 
 <div class="note">
-<p>Though likely to contain heading content, the {{HTMLElement("header")}} is not heading content itself.</p>
+<p><strong>Note:</strong> Though likely to contain heading content, the {{HTMLElement("header")}} is not heading content itself.</p>
 </div>
 
 <div class="notecard note">
