--- a/files/en-us/web/guide/html/editable_content/index.html
+++ b/files/en-us/web/guide/html/editable_content/index.html
@@ -16,8 +16,7 @@ tags:
   - text input
 ---
 <div class="notecard warning">
-  <h2>Warning</h2>
-  <p>As the <a href="https://w3c.github.io/editing/docs/execCommand/"><code>execCommand()</code> spec</a> warns, its features <q>are not implemented consistently or fully by user agents</q>, and in addition, it is marked as deprecated on the <a href="/en-US/docs/Web/API/Document/execCommand"><code>Document.execCommand()</code></a> reference page. Therefore, much of the content on this page cannot be trusted for use in production code.</p>
+  <p><strong>Warning:</strong> As the <a href="https://w3c.github.io/editing/docs/execCommand/"><code>execCommand()</code> spec</a> warns, its features <q>are not implemented consistently or fully by user agents</q>, and in addition, it is marked as deprecated on the <a href="/en-US/docs/Web/API/Document/execCommand"><code>Document.execCommand()</code></a> reference page. Therefore, much of the content on this page cannot be trusted for use in production code.</p>
 </div>
 
 <p><span class="seoSummary">In HTML, any element can be editable. By using some JavaScript event handlers, you can transform your web page into a full and fast rich text editor. This article provides some information about this functionality.</span></p>
