--- a/files/en-us/web/guide/printing/index.html
+++ b/files/en-us/web/guide/printing/index.html
@@ -32,7 +32,9 @@ tags:
 
 <p>Some browsers (including Firefox 6 and later and Internet Explorer) send <code>beforeprint</code> and <code>afterprint</code> events to let content determine when printing may have occurred. You can use this to adjust the user interface presented during printing (such as by displaying or hiding user interface elements during the print process).</p>
 
-<div class="note"><strong>Note:</strong> You can also use <a href="/en-US/docs/Web/API/WindowEventHandlers/onbeforeprint"><code>window.onbeforeprint</code></a> and <a href="/en-US/docs/Web/API/WindowEventHandlers/onafterprint"><code>window.onafterprint</code></a> to assign handlers for these events, but using {{domxref("EventTarget.addEventListener()")}} is preferred.</div>
+<div class="note">
+  <p><strong>Note:</strong> You can also use <a href="/en-US/docs/Web/API/WindowEventHandlers/onbeforeprint"><code>window.onbeforeprint</code></a> and <a href="/en-US/docs/Web/API/WindowEventHandlers/onafterprint"><code>window.onafterprint</code></a> to assign handlers for these events, but using {{domxref("EventTarget.addEventListener()")}} is preferred.</p>
+</div>
 
 <h2 id="Examples">Examples</h2>
 
@@ -110,7 +112,9 @@ function printPage (sURL) {
 &lt;/html&gt;
 </pre>
 
-<div class="note"><strong>Note:</strong> Older versions of Internet Explorer cannot print the contents of a hidden {{HTMLElement("iframe")}}.</div>
+<div class="note">
+  <p><strong>Note:</strong> Older versions of Internet Explorer cannot print the contents of a hidden {{HTMLElement("iframe")}}.</p>
+</div>
 
 <h2 id="See_also">See also</h2>
 
